fix clipping through footer on small page height

--- a/app/src/styles/index.css
+++ b/app/src/styles/index.css
@@ -22,16 +22,18 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh;
+  min-height: 100vh;
+  max-height: 100vh;
 }
 
 .content {
-  max-height: 85%;
+  min-height: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
   width: 100%;
+  flex: 1;
 }
 
 .navbar {
@@ -140,10 +142,11 @@ form > div > p,
 
 .dashboard {
   display: grid;
-  height: 100%;
+  min-height: 100%;
   width: 97%;
   grid-template: 1fr 14fr/ 1fr 4fr;
   gap: 8px;
+  flex: 1;
 }
 
 .dashboard > * {
@@ -601,7 +604,7 @@ form > div > p,
     flex-direction: column;
   }
   .sidebar {
-    height: 100%;
+    min-height: 130px;
   }
   .login {
     text-align: center;
